# discretize-guides

./: .gitignore  .gitmodules  CMakeLists.txt  docker-compose.yml  settings.json
api/: Dockerfile  index.js  package.json
client/: CMakeLists.txt
client/application/: main.cpp
client/benchmarks/: cpu.h  cpu_cache.cpp  cpu_calculation.cpp  gpu.h  gpu_shading.cpp  measurement.cpp  measurement.h  ram.h  ram_stream.cpp  units.h
client/glad/: CMakeLists.txt
client/glad/include/glad/: glad.h
client/glad/src/: glad.c
client/hardwareinfo/: cpu.cpp  drive.cpp  gpu.cpp  hardware.h  mainboard.cpp  ram.cpp  wmi.cpp  wmi.h
worker/: Dockerfile  db.py  main.py  requirements.txt
